* Fade/show effect for comment actions * Use jQuery for fade effect for indexpage bottombar, so it works on IE * download box CSS * Fixed a problem with comment date display * Lighter colouring for blockquotes, lists * More margins for posts, more line spacing

--- a/style.css
+++ b/style.css
@@ -56,12 +56,52 @@ BLOCKQUOTE
     background-position: 2px 1px;
     background-repeat: no-repeat;
     background-color: #f0f0aa;
+    background-color: #fffccc;
     color: #222222;
-    margin: 15px 25px 15px 25px;
-    padding: 20px 20px 10px 20px;
+}
+
+BLOCKQUOTE P:first-child
+{
+    margin-top: 0px;
+}
+
+BLOCKQUOTE P:last-child
+{
+    margin-bottom: 0px;
+}
+
+BLOCKQUOTE,
+.entry UL,
+.entry OL
+{
+    margin: 15px 35px 25px 35px;
+    padding: 20px 40px 20px 40px;
+    overflow: auto;
     border-radius: 15px;
     -webkit-border-radius: 15px;
     -moz-border-radius: 15px;
+}
+
+.entry UL,
+.entry OL
+{
+	background-color: #ddf5ff;
+    padding-left: 50px;
+}
+
+BLOCKQUOTE UL,
+BLOCKQUOTE OL
+{
+    background-color: inherit !important;
+    border-style: none !important;
+    margin: 0px !important;
+    padding: 0px 30px !important;
+}
+
+.post LI
+{
+    padding: 4px 0px;
+	margin-left: 0px;
 }
 
 /*
@@ -620,9 +660,9 @@ LEGEND A,
 
 .entry
 {
-    padding: 10px 25px;
+    padding: 10px 50px;
     color: #111111;
-    line-height: 150%;
+    line-height: 200%;
 }
 
 .entry,
@@ -635,6 +675,12 @@ LEGEND A,
 {
     text-decoration: none;
     border-bottom: 1px dotted #aaaaaa;
+}
+
+.entry > P:first-child:first-letter
+{
+    color: #662222;
+    font-size: larger;
 }
 
 #postaction
@@ -663,6 +709,12 @@ LEGEND A,
     -webkit-border-bottom-right-radius: 20px;
     -moz-border-radius-bottomleft: 20px;
     -moz-border-radius-bottomright: 20px;
+}
+
+.fadedbottombar
+{
+    opacity: 0.3;
+    filter: alpha(opacity = 30);
 }
 
 .postmetadata .commentlink
@@ -773,6 +825,11 @@ LEGEND A,
     -moz-border-radius: 25px; 
 }
 
+.commenttext
+{
+    line-height: 150%;
+}
+
 #comments > UL,
 #comments UL.children,
 #comments > LI.comment
@@ -831,41 +888,12 @@ FIELDSET.comment .commenttext
 	color: #333333;
 }
 
-.entry UL,
-.entry OL
+#comments .postmetadata,
+.replybuttonbox
 {
-	margin-left: 0px;
-	padding: 15px;
-	padding-left: 30px;
-	background-color: #d0f0ff;
-    border-radius: 15px;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px; 
-}
-
-BLOCKQUOTE UL,
-BLOCKQUOTE OL
-{
-    background-color: inherit !important;
-    border-style: none !important;
-}
-
-.post LI
-{
-    padding: 4px 0px;
-	margin-left: 0px;
-    /*border-bottom: 1px dotted #aaaaaa;*/
-}
-
-.post LI:first-child
-{
-    /*border-top: 1px dotted #aaaaaa;*/
-}
-
-.entry > P:first-child:first-letter
-{
-    color: #662222;
-    font-size: larger;
+    padding: 10px 25px;
+    text-align: right;
+    visibility: hidden;
 }
 
 .navigation .capsule
@@ -946,13 +974,6 @@ BLOCKQUOTE OL
     background-color: #eeeeee;
 }
 
-#comments .postmetadata,
-.replybuttonbox
-{
-    padding: 10px 25px;
-    text-align: right;
-}
-
 #cancel-comment-reply
 {
     display: inline;
@@ -972,6 +993,33 @@ img.avatar
     border-radius: 10px; 
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px; 
+}
+
+.downloadbox
+{
+    float: left;
+    margin: 5px 30px 5px 0px;
+    background: url(images/download.png) 15px center no-repeat;
+    background-color: #cccccc;
+    color: #000000;
+    font-size: 13pt;
+    padding: 10px 18px;
+    padding-left: 50px;
+    cursor: pointer;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    box-shadow: 0px 0px 5px #555555;
+    -moz-box-shadow: 0px 0px 5px #555555;
+    -webkit-box-shadow: 0px 0px 5px #555555;
+}
+
+.downlink,
+.downlink:hover
+{
+    color: inherit !important; 
+    text-decoration: none !important;
+    border-style: none !important;
 }
 
 /* required as per wordpress.org */
